--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "Data Support for Swedish Pharmacy Residents"
 output_dir: "."
 navbar:
-#  title: "Data Support for Swedish Pharmacy Residents"
+  title: "Data Support for Swedish Pharmacy Residents"
   # left:
   #   - text: "Home"
   #     href: index.html
